@@ -10,7 +10,7 @@ use Test::More;
 use Config::Model;
 use Data::Dumper ;
 
-BEGIN { plan tests => 68; }
+BEGIN { plan tests => 70; }
 
 use strict;
 
@@ -69,6 +69,14 @@ $model ->create_config_class
        choice_list_with_upstream_default
        => { type          => 'check_list',
 	    choice        => ['A' .. 'Z'],
+	    built_in_list => [ 'A', 'D' ],
+	    help          => { A => 'A help', E => 'E help' } ,
+	  },
+
+       choice_list_with_default_and_upstream_default
+       => { type          => 'check_list',
+	    choice        => ['A' .. 'Z'],
+	    default_list  => [ 'A', 'C' ],
 	    built_in_list => [ 'A', 'D' ],
 	    help          => { A => 'A help', E => 'E help' } ,
 	  },
@@ -297,7 +305,6 @@ is_deeply([$warp_list->get_choice] ,
 @got = $warp_list->get_checked_list ;
 is_deeply (\@got, [], "test default of warped_choice_list after setting macro=AH") ;
 
-
 # test reference to list values
 $root->load("dumb_list=a,b,c,d,e") ;
 
@@ -313,6 +320,14 @@ is_deeply (\@got, [], "test default of choice_list_with_upstream_default") ;
 
 @got = $wud->get_checked_list('upstream_default') ;
 is_deeply (\@got, [qw/A D/], "test upstream_default of choice_list_with_upstream_default") ;
+
+# test check list with upstream_default *and* default (should override)
+my $wudad = $root->fetch_element("choice_list_with_default_and_upstream_default") ;
+@got = $wudad->get_checked_list('default') ;
+is_deeply (\@got, [qw/A C/], "test default of choice_list_with_default_and_upstream_default") ;
+
+@got = $wudad->get_checked_list() ;
+is_deeply (\@got, [qw/A C/], "test default of choice_list_with_default_and_upstream_default") ;
 
 ### test preset feature
 
